# pkg/publicapi/endpoints_results.go
@@ -20,7 +20,7 @@ type resultsResponse struct {
 }
 
 // results godoc
-// @ID                   pkg/publicapi/results
+// @ID                   results
 // @Summary              Returns the results of the job-id specified in the body payload.
 // @Description.markdown endpoints_results
 // @Tags                 Job
